# zero-drift-chat

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  README.md  SECURITY.md  bump.sh  install.ps1  install.sh
.cargo/: config.toml
.github/workflows/: release.yml
configs/: default.toml
docs/: WISHLIST.md  index.html
docs/plans/: 2026-03-04-chat-pin-unpin-design.md  2026-03-04-chat-pin-unpin.md  2026-03-04-clickable-links.md  2026-03-04-enter-sends-setting.md  2026-03-04-input-improvements-design.md  2026-03-04-input-improvements.md  2026-03-04-link-url-design.md  2026-03-04-terminal-title-unread-design.md  2026-03-04-terminal-title-unread.md  2026-03-05-chat-search-design.md  2026-03-05-chat-search.md  2026-03-06-ai-autocomplete-design.md  2026-03-06-ai-autocomplete.md
docs/superpowers/plans/: 2026-03-10-bracketed-paste.md  2026-03-10-message-layout-group-indicator.md  2026-03-11-telegram-provider.md  2026-03-13-show-picture.md  2026-03-16-typing-indicator-running-light.md  2026-03-16-typing-indicator.md  2026-03-17-btop-ui-enhancements.md
docs/superpowers/specs/: 2026-03-10-bracketed-paste-design.md  2026-03-10-message-layout-group-indicator-design.md  2026-03-11-telegram-provider-design.md  2026-03-13-show-picture-design.md  2026-03-14-telegram-unicode-truncation-unknown-sender-debug-log-design.md  2026-03-16-typing-indicator-design.md  2026-03-16-typing-indicator-running-light-design.md  2026-03-17-btop-ui-enhancements-design.md
src/: app.rs  main.rs
src/ai/: context.rs  mod.rs  worker.rs
src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
src/config/: settings.rs
src/core/: mod.rs  provider.rs  router.rs  types.rs
src/providers/: mod.rs
src/providers/mock/: mod.rs
src/providers/telegram/: convert.rs  mod.rs
src/providers/whatsapp/: convert.rs  mod.rs
src/storage/: activity.rs  addressbook.rs  chats.rs  db.rs  lid_map.rs  messages.rs  mod.rs  preferences.rs  schedule.rs  sessions.rs
src/tui/: app_state.rs  event.rs  keybindings.rs  media.rs  mod.rs  osc8.rs  render.rs  search.rs  time_parse.rs
src/tui/widgets/: chat_list.rs  (+10 more)
