[package]
name = "zero-drift-chat"
version = "0.3.1"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.37" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
unicode-width = "0.2"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dirs = "5"
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", default-features = true }
qrcode = "0.14"
tui-textarea = { version = "0.7", features = ["crossterm"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }
grammers-client = { git = "https://codeberg.org/Lonami/grammers", package = "grammers-client" }
grammers-session = { git = "https://codeberg.org/Lonami/grammers", package = "grammers-session", default-features = false, features = ["serde"] }
